--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'org.jetbrains.intellij' version '0.4.2'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.intellij' version '0.4.15'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 group 'de.cvguy.kotlin.koreander'
-version '0.1'
+version '0.10'
 
 repositories {
     mavenCentral()
@@ -15,8 +15,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation('de.cvguy.kotlin:koreander:0.0.8') {
-        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-compiler'
+    implementation('de.cvguy.kotlin:koreander:0.0.10') {
+        exclude group: 'org.jetbrains.kotlin', module: 'kotlin-compiler-embeddable'
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-script'
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-script-util'
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-script-runtime'
@@ -30,6 +30,6 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 intellij {
-    version '2018.3.4'
-    setPlugins("org.jetbrains.kotlin:1.3.11-release-IJ2018.3-1")
+    version '2019.3'
+    setPlugins("org.jetbrains.kotlin:1.3.61-release-IJ2019.3-1")
 }
