--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'org.jetbrains.intellij' version '0.4.15'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jetbrains.intellij' version '0.4.18'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
 
 group 'de.cvguy.kotlin.koreander'
-version '0.10'
+version '0.2'
 
 repositories {
     mavenCentral()
@@ -14,13 +14,14 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation('de.cvguy.kotlin:koreander:0.0.10') {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
+    implementation("de.cvguy.kotlin:koreander:0.1.0") {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-compiler-embeddable'
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-script'
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-script-util'
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-script-runtime'
     }
+
 }
 
 compileKotlin {
@@ -30,6 +31,6 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 intellij {
-    version '2019.3'
-    setPlugins("org.jetbrains.kotlin:1.3.61-release-IJ2019.3-1")
+    version '2020.1'
+    setPlugins("Kotlin")
 }
